...
  }

  const globalProducts = [
    {
      id: "gp-001",
      name: "Paracetamol 500mg",
      dci: "Paracetamol",
      dosage: "500mg",
      form: "Comprimido",
      manufacturer: "Brócolis Pharma",
      active: true,
      brandId: "brand-001",
      categoryId: "cat-001",
...
      brandId: "brand-002",
      categoryId: "cat-003",
    },
    {
      id: "gp-004",
      name: "Ibuprofeno 400mg",
      dci: "Ibuprofeno",
      dosage: "400mg",
      form: "Comprimido",
      manufacturer: "Brócolis Pharma",
      active: true,
      brandId: "brand-001",
      categoryId: "cat-004",
...
